--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ h1, h2 {
   border-bottom: none;
 }
 
+#preview {
+  h1 {
+    border-bottom: none;
+  }
+}
+
 #editor {
   background: SlateGrey;
   padding: 0px;
